# default-python-project-structure-1

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  outline.txt  project_template.sh  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: API.rst  api.rst  conf.py  index.rst  overview.rst
notebook/: example_notebook.ipynb
src/: __init__.py
template_files/: Dockerfile.template  config.json.template
template_files/tests/: test_sample.py.template
tests/: test_example.py
