[tool.poetry]
name = "default-python-project-structure"
version = "0.1.0"
description = "A template repository for Agile Python projects for personal portfolio projects."
authors = ["Reuben Haug <reuben.haug@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
